<resources>
    <string name="app_name">RestaurantFoodDeliveryAndroidApp</string>
    <string name="todo">TODO</string>
    <string name="good_morning">Good Morning</string>
    <string name="amanda_alex">Amanda Alex</string>
    <string name="quick_action">Quick Action</string>
    <string name="best_for_you">Best For You</string>
    <string name="see_more">See More</string>
    <string name="pastas">Pastas</string>
    <string name="_40_min">40 min</string>
    <string name="_50">$ 50</string>
    <string name="restaurants_nearby">Restaurants Nearby</string>
    <string name="china_town">China Town</string>
    <string name="get_started">Get Started!</string>
</resources>